--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
   <head>
-    <title>RedTetris</title>
-    <link rel="icon" href="http://redpelicans.com/favicon.ico">                                                                                                                                          
+    <title>Red Tetris</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="http://redpelicans.com/favicon.ico">
   </head>
   <body>
-    <div id="tetris"></div>
+    <div id="root"></div>
     <script src="bundle.js"></script>
   </body>
 </html>
