--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Red Tetris</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="http://redpelicans.com/favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
