--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Red Tetris</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="http://redpelicans.com/favicon.ico">
+    <link rel="icon" href="https://redpelicans.com/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap" rel="stylesheet">
   </head>
   <body>
